fixed charts being slightly too large

--- a/src/app/client/context/tasks/taskContentSociocortex/taskContentSociocortex.component.css
+++ b/src/app/client/context/tasks/taskContentSociocortex/taskContentSociocortex.component.css
@@ -24,6 +24,6 @@
 
 .chart-container {
   position: relative;
-  width: 100%;
+  width: 99%;
   height: 200px;
 }
